--- a/bookmark.html
+++ b/bookmark.html
@@ -9,6 +9,8 @@
 <h2>书签</h2>
 <ul class="links">
 <li><a href="http://he.10086.cn/app/ecu/resource/otherlinks/html/Index3.html?sc=1980" target="_blank"><span class="iconfont cmcc"></span> 移动任性选</a></li>
+<li><a href="https://qqt.cmicrwx.cn/2016tyjf/qqtxly/res/wap/index.html#/home/travel" target="_blank"><span class="iconfont cmcc"></span> 全球通尊享礼遇</a></li>
+<li><a href="https://playtv-live.ifeng.com/live/06OLEEWQKN4.m3u8" target="_blank"><span class="iconfont ifeng"></span> 凤凰卫视资讯台</a></li>
 <li><a href="https://wap.he.10086.cn/ngwap/autologin.do" target="_blank"><span class="iconfont cmcc"></span> 移动掌厅</a></li>
 <li><a href="https://squoosh.app" target="_blank"><img src="images/squoosh.png" width="17px">Squoosh</a></li>
 <li><a href="http://www.abchina.com/cn/CreditCard/WealthManagement/fqnhl" target="_blank"><span class="iconfont abchina"></span>分期年化率</a></li>
