--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <div class="content">
 </div>
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+<script src="https://fastly.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
 <script src="js/menu.js"></script>
 </body>
 </html>
