--- a/city-gdp.html
+++ b/city-gdp.html
@@ -7,7 +7,7 @@
 <div class="content">
 <h2>2021年中国大陆城市GDP排名</h2>
 <div class="sheet">
-<table>
+<table id="sort">
 <thead>
 <tr><th>#</th><th>城市</th><th>省内排名</th><th>GDP(亿元)</th></tr></thead>
 <tbody>
@@ -319,5 +319,6 @@
 </table>
 </div>
 </div>
+<script src="js/sort.js"></script>
 </body>
 </html>
