--- a/movies.html
+++ b/movies.html
@@ -448,6 +448,9 @@
 <tr><td>103</td><td>聊斋</td><td>谢晋</td><td>神话</td><td>陈红、何晴</td><td>中国</td><td>1988</td><td>福建电视台</td><td>8.6</td></tr>
 <tr><td>104</td><td>地球脉动2</td><td>Justin Anderson</td><td>纪录</td><td></td><td>英国</td><td>2016</td><td>BBC</td><td>9.8</td></tr>
 <tr><td>105</td><td>三毛流浪记</td><td>徐景达、熊南清</td><td>动画</td><td></td><td>中国</td><td>1984</td><td>/</td><td>8.9</td></tr>
+<tr><td>106</td><td>葫芦小金刚</td><td>葛桂云</td><td>动画</td><td></td><td>中国</td><td>1991</td><td>上海美术电影制片厂</td><td>9.2</td></tr>
+<tr><td>107</td><td>射雕英雄传</td><td>杜琪峰</td><td>武侠</td><td>黄日华、翁美玲</td><td>香港</td><td>1983</td><td>香港电视广播有限公司</td><td>9.2</td></tr>
+<tr><td>108</td><td>天若有情</td><td>陈木胜</td><td>动作</td><td>刘德华、吴倩莲</td><td>香港</td><td>1990</td><td>艺能影业有限公司</td><td>8.4</td></tr>
 </tbody>
 </table>
 </div>
