--- a/bookmark.html
+++ b/bookmark.html
@@ -9,9 +9,9 @@
 <h2>书签</h2>
 <ul class="links">
 <li><a href="https://dev.coc.10086.cn/coc3/canvas/rightsmarket-h5-canvas/online/home" target="_blank"><span class="iconfont cmcc"></span> 移动权益超市</a></li>
-<li><a href="https://learn.microsoft.com/zh-cn/training/modules/implement-common-integration-features-finance-ops/10-exercise-1" target="_blank"> 微软云桌面</a></li>
-<li><a href="https://playtv-live.ifeng.com/live/06OLEEWQKN4.m3u8" target="_blank"><span class="iconfont ifeng"></span> 凤凰卫视资讯台</a></li>
-<li><a href="https://squoosh.app" target="_blank"><img src="images/squoosh.png" width="17px">Squoosh</a></li>
+<li><a href="https://learn.microsoft.com/zh-cn/training/modules/implement-common-integration-features-finance-ops/10-exercise-1" target="_blank"><span class="iconfont microsoft"></span> 微软云桌面</a></li>
+<li><a href="https://playtv-live.ifeng.com/live/06OLEEWQKN4.flv" target="_blank"><span class="iconfont ifeng"></span> 凤凰卫视资讯台</a></li>
+<li><a href="https://n24-cdn-live.ntv.co.jp/ch01/index.m3u8" target="_blank"><span class="iconfont live"></span> News24</a></li>
 </ul>
 </div>
 </body>
